# carol-check

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  discard-r.cabal
checker/: Cargo.toml
checker/src/: base_check.rs  lib.rs
demo/: Cargo.toml
demo/src/: main.rs
haskell/Language/: CBPV.hs  Carol.hs
haskell/src/Language/Carol/: AST.hs  CARD.hs  Domain.hs  Parse.hs  Prelude.hs  TypeCheck.hs  TypeContext.hs
haskell/src/Language/Carol/AST/: Domain.hs  PrettyPrint.hs  Refinement.hs  Terms.hs  Types.hs
haskell/src/Language/Carol/AST/Types/: ExVars.hs  Existential.hs
haskell/src/Language/Carol/Prelude/: Internal.hs  Lens.hs  PrettyPrint.hs  State.hs  Types.hs
haskell/src/Language/Carol/TypeCheck/: Context.hs  Error.hs  Inst.hs  Solve.hs  SubCheck.hs
haskell/src/Language/Carol/TypeCheck/Context/: Base.hs  Index.hs
haskell/tests/: tests.hs
lang/: Cargo.toml
lang/src/: ast.rs  lib.rs
src/: ast.rs  base_check.rs  card.rs  main.rs
