cabal-version:       >=1.10
name:                discard-r
version:             0.1.0.0
synopsis:            Refinement typechecking for Carol-R
license:             MIT
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Language.Carol.AST
                     , Language.Carol.Parse
                     , Language.Carol.TypeCheck
  other-modules:       Language.Carol.AST.PrettyPrint
                     , Language.Carol.AST.Terms
                     , Language.Carol.AST.Types
                     , Language.Carol.AST.Domain
                     , Language.Carol.AST.Refinement
                     , Language.Carol.AST.Types.ExVars
                     , Language.Carol.TypeCheck.Context
                     , Language.Carol.TypeCheck.Error
                     , Language.Carol.TypeCheck.Inst
                     , Language.Carol.TypeCheck.SubCheck
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , containers
                     , mtl
                     , parsec
                     , sbv >=8.7 && <8.8
                     , text
  hs-source-dirs:      haskell/src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      haskell/tests
  default-language:    Haskell2010
  build-depends:       discard-r
                     , base
                     , containers
                     , mtl
                     , tasty >=1.2.3 && <1.3
                     , tasty-hunit >=0.10.0 && <0.11
